lots of updates including calibration and first real data

--- a/notebooks/Draftplot_ORF.ipynb
+++ b/notebooks/Draftplot_ORF.ipynb
@@ -25,6 +25,7 @@
     "import xarray as xr\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
+    "from scipy.optimize import curve_fit\n",
     "\n",
     "import sys\n",
     "sys.path.append('../src')\n",
@@ -55,7 +56,8 @@
    "outputs": [],
    "source": [
     "ad = AllData()\n",
-    "ad.gather()"
+    "ad.fitctrl = True\n",
+    "ad.gather(update=False)"
    ]
   },
   {
@@ -75,7 +77,7 @@
    "source": [
     "plt.style.use('../src/style_paper')\n",
     "\n",
-    "mpl.rc('figure.subplot',left=.15)"
+    "mpl.rc('figure.subplot',left=.15,top=.95)"
    ]
   },
   {
@@ -89,22 +91,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11773af3-eb84-4805-b817-a3789104c777",
+   "id": "808ac7ff-6fc2-4f95-b6ab-9609486889d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax = plt.subplots(5,5,sharex=True,sharey=True)\n",
+    "expcap = ['EAIS','ROSS','AMUN','WEDD','PENS']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca7b9a0b-c958-4ff3-9065-a7db5db7157b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax = plt.subplots(5,5,figsize=(7,7),sharex=True,sharey=True)#'row')\n",
     "for e,ex in enumerate(ad.exp[:5]):\n",
     "    for b,bas in enumerate(ad.basin):\n",
-    "        ax[b,e].plot(ad.rftime,1000*ad.tanom[:,e,b]/ad.pert,c=ad.bcol[bas])\n",
+    "        ax[b,e].axhline(0,1,0,ls=':',c='k')\n",
+    "        ax[b,e].plot(ad.rftime,ad.tanom[:,e,b],c=ad.bcol[bas],lw=.5)\n",
+    "        ax[b,e].plot(ad.rftime,ad.fanom[:,e,b],c=ad.bcol[bas],lw=1.5)\n",
+    "        \n",
     "        if b==0:\n",
-    "            ax[b,e].set_title(f'{ex}')\n",
+    "            ax[b,e].set_title(expcap[e])\n",
     "        if e==0:\n",
     "            ax[b,e].set_ylabel(bas)\n",
     "ax[-1,2].set_xlabel('Time [years]')\n",
-    "fig.supylabel('Ocean Response Function [degC / 1000 Gt/yr]')\n",
+    "fig.supylabel(r'Temperature anomaly [$\\degree$C]')\n",
     "\n",
-    "plt.savefig(f'../draftfigs/all_orfs{ad.option}.png')\n",
+    "plt.savefig(f'../draftfigs/all_orfs.png')\n",
     "plt.show()"
    ]
   },
