--- a/notebooks/Draftplot_full_ensemble.ipynb
+++ b/notebooks/Draftplot_full_ensemble.ipynb
@@ -36,28 +36,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1f1c6db-8039-488b-b729-c2aff720d8b4",
-   "metadata": {},
-   "source": [
-    "Input parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54409f3c-cccc-4b6d-827c-845db946b2e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#year0 = 1851\n",
-    "year0 = 1951\n",
-    "\n",
-    "option = ''\n",
-    "#option = '_fit'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "22333138-56a4-48ca-973a-a400b4180028",
    "metadata": {},
    "source": [
@@ -72,20 +50,18 @@
    "outputs": [],
    "source": [
     "ad = AllData()\n",
-    "ad.year0 = year0\n",
-    "ad.option = option\n",
-    "ad.gather()\n",
-    "\n",
+    "ad.usefanom = True\n",
+    "ad.gather(update=False)\n",
     "#Select subsection of models for rapid calculation\n",
     "#ad.ds = ad.ds.isel(ism=slice(0,2),esm=slice(0,2))\n",
     "\n",
     "fe = FullEnsemble(ad)\n",
     "fe.gather(force_update=True)\n",
     "\n",
-    "try:\n",
-    "    fe = fe.drop_sel(ism='PISM_DMI')\n",
-    "except:\n",
-    "    pass"
+    "#try:\n",
+    "#    fe = fe.drop_sel(ism='PISM_DMI')\n",
+    "#except:\n",
+    "#    pass"
    ]
   },
   {
@@ -104,11 +80,10 @@
    "outputs": [],
    "source": [
     "plt.style.use('../src/style_paper')\n",
-    "mpl.rc('figure.subplot',left=.15)\n",
+    "mpl.rc('figure.subplot',left=.15,bottom=.2)\n",
     "\n",
-    "bmps_long = ['linear basal melt','quadratic basal melt']\n",
-    "alpha = .3\n",
-    "perc = [17,83]"
+    "alpha = .3 #Transparency of uncertainty range\n",
+    "perc = [17,83] #Percentiles of uncertainty range"
    ]
   },
   {
@@ -126,32 +101,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax = plt.subplots(2,3,sharex=True,sharey='row')\n",
+    "fig,ax = plt.subplots(1,3,sharex=True,sharey='row',figsize=(7,3))\n",
     "\n",
-    "for b,bmp in enumerate(ad.bmps):\n",
-    "    for s,ss in enumerate(ad.ssp):\n",
-    "        dax = ax[b,s]\n",
-    "        dax.plot(fe.time,100*np.median(fe.slr_nf[b,s,:,:,:],axis=(0,1)),c='.5',lw=2,label='No feedback')\n",
-    "        dax.fill_between(fe.time,100*np.percentile(fe.slr_nf[b,s,:,:,:],perc[0],axis=(0,1)),100*np.percentile(fe.slr_nf[b,s,:,:,:],perc[1],axis=(0,1)),color='.5',alpha=alpha,label=perc)\n",
+    "for s,ss in enumerate(ad.ssp):\n",
+    "    #Plot no feedback\n",
+    "    ax[s].plot(fe.time,100*np.median(fe.slr_nf[s,:,:,:],axis=(0,1)),c='.5',lw=2,label='No feedback')\n",
+    "    ax[s].fill_between(fe.time,100*np.percentile(fe.slr_nf[s,:,:,:],perc[0],axis=(0,1)),100*np.percentile(fe.slr_nf[s,:,:,:],perc[1],axis=(0,1)),color='.5',alpha=alpha,label=perc)\n",
     "\n",
-    "        dax.plot(fe.time,100*np.median(fe.slr_wf[b,s,:,:,:],axis=(0,1)),c=ad.scol[ss],lw=2,label='With feedback')\n",
-    "        dax.fill_between(fe.time,100*np.percentile(fe.slr_wf[b,s,:,:,:],perc[0],axis=(0,1)),100*np.percentile(fe.slr_wf[b,s,:,:,:],perc[1],axis=(0,1)),color=ad.scol[ss],alpha=alpha)\n",
-    "        if b==0:\n",
-    "            dax.set_title(f'SSP-{ss}')\n",
-    "    ax[b,0].set_ylabel(bmps_long[b])\n",
-    "            \n",
-    "ax[0,0].legend(loc='upper left')\n",
-    "fig.supylabel('Sea level rise [cm]',fontsize=9)\n",
-    "ax[1,1].set_xlabel('Time [years]')\n",
+    "    #Plot with feedback\n",
+    "    ax[s].plot(fe.time,100*np.median(fe.slr_wf[s,:,:,:],axis=(0,1)),c=ad.scol[ss],lw=2,label='With feedback')\n",
+    "    ax[s].fill_between(fe.time,100*np.percentile(fe.slr_wf[s,:,:,:],perc[0],axis=(0,1)),100*np.percentile(fe.slr_wf[s,:,:,:],perc[1],axis=(0,1)),color=ad.scol[ss],alpha=alpha)\n",
     "\n",
-    "plt.savefig(f'../draftfigs/full_ensemble{ad.option}_{ad.year0}.png',dpi=450,facecolor='w',transparent=False)\n",
-    "plt.show()"
+    "    ax[s].set_title(f'SSP-{ss}')\n",
+    "    print(100*np.median(fe.slr_wf[s,:,:,:],axis=(0,1))[-1]/(100*np.median(fe.slr_nf[s,:,:,:],axis=(0,1))[-1]))\n",
+    "    print(100*np.percentile(fe.slr_wf[s,:,:,:],perc[1],axis=(0,1))[-1]/(100*np.percentile(fe.slr_nf[s,:,:,:],perc[1],axis=(0,1))[-1]))\n",
+    "        \n",
+    "ax[0].legend(loc='upper left')\n",
+    "ax[0].set_ylabel('Sea level rise [cm]',fontsize=9)\n",
+    "ax[1].set_xlabel('Time [years]')\n",
+    "\n",
+    "plt.savefig(f'../draftfigs/full_ensemble_{fe.year0}.png',dpi=450,facecolor='w',transparent=False)\n",
+    "plt.show()\n",
+    "\n",
+    "#100-100*np.sum(fe.gamma<0,axis=(0,1))/(fe.gamma.shape[0]*fe.gamma.shape[1])\n",
+    "\n",
+    "#gampos = np.where(fe.gamma>0,fe.gamma,0)\n",
+    "\n",
+    "#np.nanmean(gampos,axis=(0,1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0541214-1fdb-4a83-834f-e3ad6223c0df",
+   "id": "60786b93-779d-40ce-aea3-1b8ee87977b9",
    "metadata": {},
    "outputs": [],
    "source": []
