--- a/notebooks/Draftplot_linearitycheck.ipynb
+++ b/notebooks/Draftplot_linearitycheck.ipynb
@@ -54,7 +54,9 @@
    "outputs": [],
    "source": [
     "ad = AllData()\n",
-    "ds = ad.gather()"
+    "ad.fitctrl=True\n",
+    "\n",
+    "ds = ad.gather(update=True)"
    ]
   },
   {
@@ -74,7 +76,17 @@
    "source": [
     "plt.style.use('../src/style_paper')\n",
     "\n",
-    "mpl.rc('figure.subplot',left=.12)"
+    "mpl.rc('figure.subplot',left=.15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d5522f4-b29b-40f3-958f-dfe4857da4d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = [.5,.5,.5,.5,.5]"
    ]
   },
   {
@@ -84,32 +96,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax = plt.subplots(5,4,sharex=True,sharey=True)\n",
+    "fig,ax = plt.subplots(5,4,sharey='row')\n",
     "for b,bas in enumerate(ad.basin):\n",
     "    for i in range(4):\n",
     "        ax[b,i].axhline(0,0,1,c='.5',ls=':')\n",
     "    \n",
-    "    ax[b,0].plot(ad.rftime,ad.tanom[:,5,b],c=ad.bcol[bas])\n",
-    "    ax[b,1].plot(ad.rftime,np.sum(ad.tanom[:,:5,b],axis=1),c=ad.bcol[bas])\n",
-    "    ax[b,2].plot(ad.rftime,2*ad.tanom[:,6,b],c=ad.bcol[bas])\n",
-    "    ax[b,3].plot(ad.rftime,.5*ad.tanom[:,7,b],c=ad.bcol[bas])\n",
+    "    ax[b,0].plot(ad.rftime,np.mean(ad.tanom[:,:5,b],axis=1),c=ad.bcol[bas],lw=0.5)\n",
+    "    ax[b,0].plot(ad.rftime,np.mean(ad.fanom[:,:5,b],axis=1),c=ad.bcol[bas],lw=1.5)\n",
+    "    ax[b,1].plot(ad.rftime,ad.tanom[:,6,b],c=ad.bcol[bas],lw=0.5)\n",
+    "    ax[b,1].plot(ad.rftime,ad.fanom[:,6,b],c=ad.bcol[bas],lw=1.5)\n",
+    "    ax[b,2].plot(ad.rftime,ad.tanom[:,5,b],c=ad.bcol[bas],lw=0.5)\n",
+    "    ax[b,2].plot(ad.rftime,ad.fanom[:,5,b],c=ad.bcol[bas],lw=1.5)\n",
+    "    \n",
+    "    y400  = np.mean(ad.tanom[-75:,:5,b])\n",
+    "    y1000 = np.mean(ad.fanom[-75:,6,b])\n",
+    "    y2000 = np.mean(ad.tanom[-75:,5,b])\n",
+    "    \n",
+    "    ax[b,3].scatter([0,400,1000,2000],[0,y400,y1000,y2000],c=ad.bcol[bas],s=10)\n",
+    "    \n",
+    "    xarr = np.arange(0,2000)\n",
+    "    ax[b,3].plot(xarr,y400/400*xarr,c=ad.bcol[bas],ls=':')\n",
+    "    ax[b,3].plot(xarr,(xarr/400)**(alpha[b])*y400,c=ad.bcol[bas])\n",
+    "    ax[b,3].text(.02,.8,fr\"$\\alpha$ = {alpha[b]}\",transform=ax[b,3].transAxes,c=ad.bcol[bas])\n",
+    "    \n",
+    "    ax[b,3].set_xticks([0,400,1000,2000])\n",
+    "    #ax[b,3].plot([0,2000],[0,5*np.mean(ad.fanom[-1,:5,b])],c=ad.bcol[bas],ls=':')\n",
+    "\n",
+    "    #ax[b,3].plot(ad.rftime,.5*ad.tanom[:,7,b],c=ad.bcol[bas])\n",
     "\n",
     "    ax[b,0].set_ylabel(bas)\n",
-    "ax[0,0].set_title('TOTL')\n",
-    "ax[0,1].set_title('sum of 5')\n",
-    "ax[0,2].set_title('HALF * 2')\n",
-    "ax[0,3].set_title('DOUB / 2')\n",
-    "fig.supxlabel('Time [years]')\n",
-    "fig.supylabel('Ocean temperature response [degC]')\n",
+    "    \n",
+    "    if b < 4:\n",
+    "        for i in range(4):\n",
+    "            ax[b,i].set_xticklabels([])\n",
+    "ax[0,0].set_title('400 Gt/yr')\n",
+    "ax[0,1].set_title('1000 Gt/yr')\n",
+    "ax[0,2].set_title('2000 Gt/yr')\n",
+    "ax[0,3].set_title('Equilibrium response')\n",
     "\n",
-    "plt.savefig(f'../draftfigs/linearitycheck{ad.option}.png')\n",
+    "ax[4,1].set_xlabel('Time [years]')\n",
+    "ax[4,3].set_xlabel('Perturbation [Gt/yr]')\n",
+    "fig.supylabel(r\"Ocean temperature response [$\\degree$C]\")\n",
+    "\n",
+    "plt.savefig(f'../draftfigs/linearitycheck.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc04fee9-934a-4939-9cf7-57a16c202cfc",
+   "id": "cbc78742-ff53-4a85-9126-fcf73c010df8",
    "metadata": {},
    "outputs": [],
    "source": []
