--- a/notebooks/Draftplot_single_ensemble.ipynb
+++ b/notebooks/Draftplot_single_ensemble.ipynb
@@ -53,16 +53,18 @@
    "outputs": [],
    "source": [
     "#Choose starting year\n",
-    "year0 = 1951\n",
-    "#year0 = 1871\n",
+    "#year0 = 1951\n",
+    "year0 = 1871\n",
     "\n",
     "#Choose ensemble member\n",
-    "ism = 'CISM_NCA'\n",
+    "#ism = 'ISSM_UCI'\n",
+    "ism = 'IMAU_UU'\n",
+    "#ism = 'PISM_PIK'\n",
+    "#esm = 'NorESM2-MM'\n",
     "esm = 'EC-Earth3'\n",
-    "ssp = '245'\n",
-    "\n",
-    "#Choose basal melt parameterisation\n",
-    "bmp = 'lin'"
+    "#esm = 'ACCESS-CM2'\n",
+    "#esm = 'MIROC6'\n",
+    "ssp = '245'"
    ]
   },
   {
@@ -82,11 +84,14 @@
    "source": [
     "#Read data\n",
     "ad = AllData()\n",
-    "ad.year0 = year0\n",
-    "ad.gather()\n",
+    "ad.fitctrl=True\n",
+    "ad.gather(update=False)\n",
+    "\n",
+    "#print(ad.ism)\n",
     "\n",
     "#Compute iteration of ensemble member\n",
-    "ens = EnsembleMember(ad,ism=ism,esm=esm,ssp=ssp)\n",
+    "ens = EnsembleMember(ad,ism=ism,esm=esm,ssp=ssp,year0=year0)\n",
+    "ens.usefanom = True\n",
     "ens.iterate()"
    ]
   },
@@ -109,7 +114,7 @@
     "\n",
     "mpl.rc('figure.subplot',left=.15)\n",
     "\n",
-    "savename = f'../draftfigs/single_ensemble_{ad.year0}{ad.option}.png'"
+    "savename = f'../draftfigs/single_ensemble.png'"
    ]
   },
   {
@@ -123,28 +128,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eff8ef6-ad2d-4456-b805-8c56bffc1b25",
+   "id": "fd66d76c-b2af-4895-bc57-74dd68fa5d99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax = plt.subplots(3,5,sharex=True,sharey='row')\n",
+    "fig,ax = plt.subplots(3,5,sharex=True,sharey='row',figsize=(7,5))\n",
     "\n",
     "#Choose variables to plot\n",
-    "varbs = [ens.TMP,.001*np.cumsum(ens.IML,axis=1),100*ens.SLR]\n",
+    "varbs = [ens.TMP,np.diff(ens.IML,axis=1,prepend=0),100*ens.SLR]\n",
     "\n",
     "for b,bas in enumerate(ens.basin.values):\n",
     "    for v,var in enumerate(varbs):\n",
     "        dax = ax[v,b]\n",
-    "        dax.plot(ad.time,var[0,:,b],c='.5')\n",
+    "        #Add reference lines\n",
+    "        if v==0:\n",
+    "            dax.axhline(ens.tref[b],0,1,c='.5',lw=.5)\n",
+    "        dax.axhline(0,0,1,c='k',lw=.5)\n",
+    "\n",
+    "        #First iteration in grey\n",
+    "        dax.plot(ens.time,var[0,:,b],c='.5')\n",
+    "        \n",
+    "        #Next iterations\n",
     "        for n in range(1,ens.TMP.shape[0]):\n",
-    "            dax.plot(ad.time,var[n,:,b],c=ad.bcol[bas])\n",
-    "        dax.text(.1,.8,f\"{100*((var[-1,-1,b]-var[-1,0,b])-(var[0,-1,b]-var[0,0,b]))/np.abs(var[0,-1,b]-var[0,0,b]):+.0f}%\",transform=dax.transAxes,weight='bold',c=ad.bcol[bas])\n",
+    "            dax.plot(ens.time,var[n,:,b],c=ad.bcol[bas])\n",
+    "        if v>1:\n",
+    "            dax.text(.1,.8,f\"{100*((var[-1,-1,b]-var[-1,0,b])-(var[0,-1,b]-var[0,0,b]))/np.abs(var[0,-1,b]-var[0,0,b]):+.0f}%\",transform=dax.transAxes,weight='bold',c=ad.bcol[bas])\n",
     "        \n",
     "    ax[0,b].set_title(bas)\n",
+    "\n",
     "ax[-1,2].set_xlabel('Time [years]')\n",
-    "ax[0,0].set_ylabel('Temperature [degC]')\n",
-    "ax[1,0].set_ylabel('Cumulative ice mass loss \\n [1000 Gt]')\n",
-    "ax[2,0].set_ylabel('Sea level rise [cm]')\n",
+    "ax[0,0].set_ylabel(r'Temperature [$\\degree$C]')\n",
+    "#ax[1,0].set_ylabel('Basal melt \\n anomaly \\n [m/yr]')\n",
+    "ax[1,0].set_ylabel('Anomalous \\n ice mass loss \\n [Gt/yr]')\n",
+    "ax[2,0].set_ylabel('Cumulative \\n sea level rise \\n [cm]')\n",
     "\n",
     "plt.savefig(savename)\n",
     "plt.show()"
@@ -153,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3c5c953-b5eb-4395-97cf-287913b48d56",
+   "id": "f460efb1-5380-48b2-b725-548a7653027b",
    "metadata": {},
    "outputs": [],
    "source": []
