--- a/notebooks/Draftplot_ts_control.ipynb
+++ b/notebooks/Draftplot_ts_control.ipynb
@@ -120,7 +120,9 @@
     "    r_lo[b] = np.percentile(var,perc[0])\n",
     "    r_hi[b] = np.percentile(var,perc[1])\n",
     "    \n",
-    "ds.close()"
+    "ds.close()\n",
+    "\n",
+    "print(rean)"
    ]
   },
   {
