update with last 1000 gt/yr data

--- a/notebooks/Draftplot_linearitycheck.ipynb
+++ b/notebooks/Draftplot_linearitycheck.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "plt.style.use('../src/style_paper')\n",
     "\n",
-    "mpl.rc('figure.subplot',left=.15)"
+    "mpl.rc('figure.subplot',left=.15,top=.95,bottom=.1)"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha = [.5,.5,.5,.5,.5]"
+    "alpha = [.55,.2,.4,.45,.45]"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax = plt.subplots(5,4,sharey='row')\n",
+    "fig,ax = plt.subplots(5,4,sharey='row',figsize=(7,7))\n",
     "for b,bas in enumerate(ad.basin):\n",
     "    for i in range(4):\n",
     "        ax[b,i].axhline(0,0,1,c='.5',ls=':')\n",
@@ -109,7 +109,7 @@
     "    ax[b,2].plot(ad.rftime,ad.fanom[:,5,b],c=ad.bcol[bas],lw=1.5)\n",
     "    \n",
     "    y400  = np.mean(ad.tanom[-75:,:5,b])\n",
-    "    y1000 = np.mean(ad.fanom[-75:,6,b])\n",
+    "    y1000 = np.mean(ad.tanom[-75:,6,b])\n",
     "    y2000 = np.mean(ad.tanom[-75:,5,b])\n",
     "    \n",
     "    ax[b,3].scatter([0,400,1000,2000],[0,y400,y1000,y2000],c=ad.bcol[bas],s=10)\n",
@@ -125,6 +125,7 @@
     "    #ax[b,3].plot(ad.rftime,.5*ad.tanom[:,7,b],c=ad.bcol[bas])\n",
     "\n",
     "    ax[b,0].set_ylabel(bas)\n",
+    "    ax[b,0].set_ylim([np.min(ad.tanom[:,5,b])-.1,np.max(ad.tanom[:,5,b])+.1])\n",
     "    \n",
     "    if b < 4:\n",
     "        for i in range(4):\n",
