--- a/notebooks/Draftplot_single_ensemble.ipynb
+++ b/notebooks/Draftplot_single_ensemble.ipynb
@@ -79,8 +79,8 @@
     "#ism = 'MALI_DOE'\n",
     "#ism = 'SICO_ILTS'\n",
     "#esm = 'NorESM2-MM'\n",
-    "#esm = 'EC-Earth3'\n",
-    "esm = 'EC-Earth3-Veg'\n",
+    "esm = 'EC-Earth3'\n",
+    "#esm = 'EC-Earth3-Veg'\n",
     "#esm = 'ACCESS-CM2'\n",
     "#esm = 'CanESM5'\n",
     "#esm = 'CAS-ESM2-0'\n",
