Include FullEnsemble2: option without calibration, with prescribed gamma

--- a/notebooks/Draftplot_ORF.ipynb
+++ b/notebooks/Draftplot_ORF.ipynb
@@ -116,7 +116,7 @@
     "            ax[b,e].set_title(expcap[e])\n",
     "        if e==0:\n",
     "            ax[b,e].set_ylabel(bas)\n",
-    "ax[-1,2].set_xlabel('Time [years]')\n",
+    "ax[-1,2].set_xlabel('Time after perturbation [years]')\n",
     "fig.supylabel(r'Temperature anomaly [$\\degree$C]')\n",
     "\n",
     "plt.savefig(f'../draftfigs/all_orfs.png')\n",
