--- a/notebooks/Draftplot_linearitycheck.ipynb
+++ b/notebooks/Draftplot_linearitycheck.ipynb
@@ -56,7 +56,7 @@
     "ad = AllData()\n",
     "ad.fitctrl=True\n",
     "\n",
-    "ds = ad.gather(update=True)"
+    "ds = ad.gather(update=False)"
    ]
   },
   {
@@ -86,7 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha = [.55,.2,.4,.45,.45]"
+    "alpha = [.55,.2,.4,.45,.45]\n",
+    "Fmax = [840,520,560,740,770]"
    ]
   },
   {
@@ -102,22 +103,39 @@
     "        ax[b,i].axhline(0,0,1,c='.5',ls=':')\n",
     "    \n",
     "    ax[b,0].plot(ad.rftime,np.mean(ad.tanom[:,:5,b],axis=1),c=ad.bcol[bas],lw=0.5)\n",
-    "    ax[b,0].plot(ad.rftime,np.mean(ad.fanom[:,:5,b],axis=1),c=ad.bcol[bas],lw=1.5)\n",
+    "    #ax[b,0].plot(ad.rftime,np.mean(ad.fanom[:,:5,b],axis=1),c=ad.bcol[bas],lw=1.5)\n",
     "    ax[b,1].plot(ad.rftime,ad.tanom[:,6,b],c=ad.bcol[bas],lw=0.5)\n",
-    "    ax[b,1].plot(ad.rftime,ad.fanom[:,6,b],c=ad.bcol[bas],lw=1.5)\n",
+    "    #ax[b,1].plot(ad.rftime,ad.fanom[:,6,b],c=ad.bcol[bas],lw=1.5)\n",
     "    ax[b,2].plot(ad.rftime,ad.tanom[:,5,b],c=ad.bcol[bas],lw=0.5)\n",
-    "    ax[b,2].plot(ad.rftime,ad.fanom[:,5,b],c=ad.bcol[bas],lw=1.5)\n",
+    "    #ax[b,2].plot(ad.rftime,ad.fanom[:,5,b],c=ad.bcol[bas],lw=1.5)\n",
     "    \n",
     "    y400  = np.mean(ad.tanom[-75:,:5,b])\n",
     "    y1000 = np.mean(ad.tanom[-75:,6,b])\n",
     "    y2000 = np.mean(ad.tanom[-75:,5,b])\n",
     "    \n",
+    "    ax[b,0].plot(ad.rftime[-75:],y400+0*ad.rftime[-75:],c=ad.bcol[bas],lw=1.5)\n",
+    "    ax[b,1].plot(ad.rftime[-75:],y1000+0*ad.rftime[-75:],c=ad.bcol[bas],lw=1.5)\n",
+    "    ax[b,2].plot(ad.rftime[-75:],y2000+0*ad.rftime[-75:],c=ad.bcol[bas],lw=1.5)\n",
+    "    \n",
+    "    \n",
+    "    print((y1000+y2000)/2*400/y400)\n",
+    "    \n",
+    "    ycut = y400/400*Fmax[b]\n",
+    "    \n",
     "    ax[b,3].scatter([0,400,1000,2000],[0,y400,y1000,y2000],c=ad.bcol[bas],s=10)\n",
+    "    \n",
+    "    xarr = np.arange(0,Fmax[b])\n",
+    "    ax[b,3].plot(xarr,y400/400*xarr,c=ad.bcol[bas])\n",
+    "    \n",
+    "    xarr = np.arange(Fmax[b],2000)\n",
+    "    ax[b,3].plot(xarr,ycut+0*xarr,c=ad.bcol[bas])\n",
     "    \n",
     "    xarr = np.arange(0,2000)\n",
     "    ax[b,3].plot(xarr,y400/400*xarr,c=ad.bcol[bas],ls=':')\n",
-    "    ax[b,3].plot(xarr,(xarr/400)**(alpha[b])*y400,c=ad.bcol[bas])\n",
-    "    ax[b,3].text(.02,.8,fr\"$\\alpha$ = {alpha[b]}\",transform=ax[b,3].transAxes,c=ad.bcol[bas])\n",
+    "    #ax[b,3].plot(xarr,(xarr/400)**(alpha[b])*y400,c=ad.bcol[bas],ls=':')\n",
+    "    #ax[b,3].text(.02,.85,fr\"$\\alpha$ = {alpha[b]}\",transform=ax[b,3].transAxes,c=ad.bcol[bas])\n",
+    "    ax[b,3].text(.02,.85,fr\"$I_m$ = {Fmax[b]} Gt/yr\",transform=ax[b,3].transAxes,c=ad.bcol[bas])\n",
+    "\n",
     "    \n",
     "    ax[b,3].set_xticks([0,400,1000,2000])\n",
     "    #ax[b,3].plot([0,2000],[0,5*np.mean(ad.fanom[-1,:5,b])],c=ad.bcol[bas],ls=':')\n",
@@ -135,7 +153,7 @@
     "ax[0,2].set_title('2000 Gt/yr')\n",
     "ax[0,3].set_title('Equilibrium response')\n",
     "\n",
-    "ax[4,1].set_xlabel('Time [years]')\n",
+    "ax[4,1].set_xlabel('Time after perturbation [years]')\n",
     "ax[4,3].set_xlabel('Perturbation [Gt/yr]')\n",
     "fig.supylabel(r\"Ocean temperature response [$\\degree$C]\")\n",
     "\n",
