--- a/notebooks/Draftplot_single_ensemble.ipynb
+++ b/notebooks/Draftplot_single_ensemble.ipynb
@@ -65,8 +65,8 @@
    "outputs": [],
    "source": [
     "#Choose starting year\n",
-    "#year0 = 1951\n",
-    "year0 = 1871\n",
+    "year0 = 1951\n",
+    "#year0 = 1871\n",
     "\n",
     "#Choose ensemble member\n",
     "#ism = 'ISSM_UCI'\n",
@@ -92,7 +92,7 @@
     "#esm = 'MRI-ESM2-0'\n",
     "#esm = 'MPI-ESM1-2-LR'\n",
     "#esm = 'GFDL-ESM4'\n",
-    "ssp = '585'"
+    "ssp = '245'"
    ]
   },
   {
@@ -118,11 +118,16 @@
     "#print(ad.ism)\n",
     "\n",
     "#Compute iteration of ensemble member\n",
-    "ens = EnsembleMember(ad,ism=ism,esm=esm,ssp=ssp,year0=year0)\n",
+    "#cal = 'I'\n",
+    "cal = 'S'\n",
+    "nonlin = 'cutoff'\n",
+    "#nonlin = 'alpha'\n",
+    "\n",
+    "ens = EnsembleMember(ad,ism=ism,esm=esm,ssp=ssp,year0=year0,cal=cal,nonlin=nonlin)\n",
     "#ens.niter=1\n",
-    "#ens.verbose=True\n",
+    "ens.verbose=True\n",
     "ens.usefanom = True\n",
-    "ens.compute()\n",
+    "ens.compute(gamma=np.array([2.6,2.6]),recal=False)\n",
     "\n",
     "print(ens.gamma)"
    ]
@@ -167,42 +172,60 @@
     "\n",
     "#Choose variables to plot\n",
     "#varbs = [ens.TMP,ens.MLT,ens.IML,100*ens.SLR]\n",
+    "#varbs = [ens.TMP,np.cumsum(ens.IML,axis=1),100*ens.SLR]\n",
     "varbs = [ens.TMP,ens.IML,100*ens.SLR]\n",
     "\n",
-    "fig,ax = plt.subplots(len(varbs),5,sharex=True,sharey='row',figsize=(7,5))\n",
+    "fig,ax = plt.subplots(len(varbs),6,sharex=True,sharey='row',figsize=(7,4.5))\n",
     "\n",
     "\n",
     "for b,bas in enumerate(ens.basin.values):\n",
     "    for v,var in enumerate(varbs):\n",
     "        dax = ax[v,b]\n",
     "        #Add reference lines\n",
-    "        if v==0:\n",
-    "            dax.axhline(ens.tref[b],0,1,c='.5',lw=.5)\n",
-    "        dax.axhline(0,0,1,c='k',lw=.5)\n",
+    "        #if v==0:\n",
+    "        #    dax.axhline(ens.tref[b],0,1,c='.5',lw=.5)\n",
+    "        dax.axhline(0,0,1,ls=':',c='k',lw=.5)\n",
     "\n",
     "        #No feedback in grey\n",
-    "        dax.plot(ens.time,var[0,:,b],c='.5',lw=1,label='No feedback')\n",
+    "        dax.plot(ens.time,var[0,:,b],c='.5',lw=1)#,label='No feedback')\n",
     "        \n",
     "        #if v == 1:\n",
     "        #    dax.text(.1,.8,f'{var[0,-1,b]:.1f}',transform=dax.transAxes)\n",
     "\n",
-    "        dax.plot(ens.time,var[1,:,b],c=ad.bcol[bas],lw=1,ls='--',label='Feedback b.r.')\n",
-    "        dax.plot(ens.time,var[2,:,b],c=ad.bcol[bas],lw=1,label='Feedback a.r.')\n",
+    "        dax.plot(ens.time,var[1,:,b],c=ad.bcol[bas],lw=1)#,label='Feedback b.r.')\n",
+    "        #dax.plot(ens.time,var[2,:,b],c=ad.bcol[bas],lw=1,label='Feedback a.r.')\n",
     "        #if v>1:\n",
     "        #    dax.text(.1,.8,f\"{100*((var[ens.nconv,-1,b]-var[ens.nconv,0,b])-(var[0,-1,b]-var[0,0,b]))/np.abs(var[0,-1,b]-var[0,0,b]):+.0f}%\",transform=dax.transAxes,weight='bold',c=ad.bcol[bas])\n",
     "        \n",
     "    ax[0,b].set_title(bas)\n",
+    "    \n",
+    "for v,var in enumerate(varbs):\n",
+    "    dax = ax[v,-1]\n",
+    "    if v<len(varbs)-2:\n",
+    "        dax.set_visible(False)\n",
+    "        continue\n",
+    "    dax.axhline(0,0,1,ls=':',c='k')\n",
+    "    dax.plot(ens.time,np.sum(var[0,:,:],axis=-1),c='.5',lw=1,label='No feedback')\n",
+    "    dax.plot(ens.time,np.sum(var[1,:,:],axis=-1),c='k',lw=1,label='Feedback')\n",
+    "    #dax.plot(ens.time,np.sum(var[2,:,:],axis=-1),c='k',lw=1,label='Feedback\\nafter recal.')\n",
+    "    \n",
+    "    print(np.sum(var[:,2017-ens.year0,:]-var[:,1979-ens.year0,:],axis=-1))\n",
     "\n",
+    "print(np.sum(var[:,-1,:],axis=-1)/np.sum(var[0,-1,:],axis=-1))\n",
+    "    \n",
     "ax[-1,2].set_xlabel('Time [years]')\n",
     "ax[0,0].set_ylabel(r'Temperature [$\\degree$C]')\n",
-    "#ax[1,0].set_ylabel('Basal melt \\n anomaly \\n [m/yr]')\n",
+    "ax[1,0].set_ylabel('Basal melt \\n anomaly \\n [m/yr]')\n",
     "ax[-2,0].set_ylabel('Anomalous \\n ice mass loss \\n [Gt/yr]')\n",
     "ax[-1,0].set_ylabel('Cumulative \\n sea level rise \\n [cm]')\n",
     "#ax[2,2].set_ylim([0,1])\n",
-    "ax[-1,-1].legend(fontsize=6.5)\n",
-    "\n",
+    "ax[1,-1].legend(fontsize=6.5,loc='upper left', bbox_to_anchor=(-.1, 1.8))\n",
+    "ax[1,-1].set_title('Total')\n",
     "#ax[0,0].set_ylim([-1,1])\n",
     "#ax[1,1].set_ylim([-10000,10000])\n",
+    "#ax[2,2].set_ylim([-1,2])\n",
+    "\n",
+    "#ax[1,1].set_ylim([-1000,5000])\n",
     "#ax[2,2].set_ylim([-1,2])\n",
     "\n",
     "plt.savefig(savename)\n",
@@ -212,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25cd1f3a-6e18-4dc5-b294-4c65682e27e4",
+   "id": "70af2301-d7d8-4a7c-9e61-c99e58211f25",
    "metadata": {},
    "outputs": [],
    "source": []
