--- a/notebooks/Draftplot_gamma.ipynb
+++ b/notebooks/Draftplot_gamma.ipynb
@@ -38,6 +38,8 @@
     "ad.gather(update=False)\n",
     "\n",
     "fe = FullEnsemble(ad)\n",
+    "fe.cal = 'S'\n",
+    "fe.nonlin = 'cutoff'\n",
     "fe.gather(force_update=False)"
    ]
   },
@@ -74,26 +76,37 @@
     "gamma1 = gamma1[~np.isnan(gamma1)]\n",
     "print(len(gamma0),len(gamma1))\n",
     "\n",
-    "gammaE = np.array([.5,.5,1,1,1,2.3,2.3,2.3,2.3,2.3,4.5,4.5,4.5,8])\n",
     "\n",
-    "ax.boxplot([gammaE,gamma0,gamma1],showfliers=False,widths=.5,notch=False)#,labels=['L2022','Before recal.','After recal.'])\n",
-    "for gammaJ in [7710,15300]:\n",
-    "    ax.plot([-1.125,-1+.125],np.array([gammaJ,gammaJ])*(1028*3974/(918*3.34e5))**2,c='k')\n",
-    "ax.plot([-1,-1],np.array([7710,15300])*(1028*3974/(918*3.34e5))**2,c='k')\n",
+    "print(np.nanmedian(gamma0),np.nanpercentile(gamma0,5),np.nanpercentile(gamma0,95))\n",
+    "print(np.nanmedian(gamma1),np.nanpercentile(gamma1,5),np.nanpercentile(gamma1,95))\n",
+    "\n",
+    "\n",
+    "gammaE = np.array([.5,.5,1,1,1,2.3,2.3,2.3,2.3,2.3,4.5,4.5,4.5,8,8])\n",
+    "\n",
+    "#print(np.nanmedian(gammaE),np.nanpercentile(gammaE,5),np.nanpercentile(gammaE,95))\n",
+    "\n",
+    "\n",
+    "ax.boxplot([gammaE,gamma0,gamma1],showfliers=False,widths=.5,notch=False,whis=(5,95))#,labels=['L2022','Before recal.','After recal.'])\n",
+    "\n",
+    "#for gammaJ in [7710,15300]:\n",
+    "#    ax.plot([-1.125,-1+.125],np.array([gammaJ,gammaJ])*(1028*3974/(918*3.34e5))**2,c='k')\n",
+    "    #print(gammaJ*(1028*3974/(918*3.34e5))**2)\n",
+    "#ax.plot([-1,-1],np.array([7710,15300])*(1028*3974/(918*3.34e5))**2,c='k')\n",
     "    \n",
-    "ax.plot([-1.25,-1+.25],np.array([11100,11100])*(1028*3974/(918*3.34e5))**2,c='tab:orange')\n",
+    "#ax.plot([-1.25,-1+.25],np.array([11100,11100])*(1028*3974/(918*3.34e5))**2,c='tab:orange')\n",
     "\n",
     "for gammaJ in [9620,21000]:\n",
     "    ax.plot([-.125,.125],np.array([gammaJ,gammaJ])*(1028*3974/(918*3.34e5))**2,c='k')\n",
+    "    print(gammaJ*(1028*3974/(918*3.34e5))**2)\n",
     "ax.plot([0,0],np.array([9620,21000])*(1028*3974/(918*3.34e5))**2,c='k')\n",
     "\n",
     "    \n",
     "ax.plot([-.25,.25],np.array([14500,14500])*(1028*3974/(918*3.34e5))**2,c='tab:orange')\n",
-    "\n",
+    "print(14500*(1028*3974/(918*3.34e5))**2)\n",
     "    \n",
     "#ax.violinplot([gammaE,gamma0,gamma1],showextrema=False,showmedians=True,quantiles=[[.17,.83],[.17,.83],[.17,.83]])#,showfliers=False,widths=.5,notch=False,labels=['L2022','Before recal.','After recal.'])\n",
-    "ax.set_xticks([-1,0,1,2,3])\n",
-    "ax.set_xticklabels(['J2020\\nlocal','J2020\\nnonlocal','L2022','Before\\nrecal.','After\\nrecal.'])\n",
+    "ax.set_xticks([0,1,2,3])\n",
+    "ax.set_xticklabels(['J2020','L2022','Before\\nrecal.','After\\nrecal.'])\n",
     "\n",
     "\n",
     "ax.set_ylim([0,10])\n",
@@ -107,7 +120,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793dcbd4-28b0-43b4-8ddf-7047bdd6e3e4",
+   "id": "9c6bd35b-385f-4cfc-bc79-af81ea2269d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.random.normal(loc=2.6,scale=.6,size=100000)\n",
+    "print(np.percentile(A,5),np.percentile(A,95))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4205677-ea4c-4021-a2bf-65ec8e0530c9",
    "metadata": {},
    "outputs": [],
    "source": []
