change model for single_ensemble

--- a/notebooks/Draftplot_single_ensemble.ipynb
+++ b/notebooks/Draftplot_single_ensemble.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "#Choose starting year\n",
-    "year0 = 1951\n",
+    "year0 = 1871\n",
     "#year0 = 1871\n",
     "\n",
     "#Choose ensemble member\n",
@@ -91,6 +91,7 @@
     "#esm = 'MIROC6'\n",
     "#esm = 'MRI-ESM2-0'\n",
     "#esm = 'MPI-ESM1-2-LR'\n",
+    "#esm = 'NorESM2-MM'\n",
     "#esm = 'GFDL-ESM4'\n",
     "ssp = '245'"
    ]
@@ -115,7 +116,7 @@
     "ad.fitctrl=True\n",
     "ad.gather(update=False)\n",
     "\n",
-    "#print(ad.ism)\n",
+    "#print(ad.esm)\n",
     "\n",
     "#Compute iteration of ensemble member\n",
     "#cal = 'I'\n",
@@ -236,6 +237,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "70af2301-d7d8-4a7c-9e61-c99e58211f25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "458c2eae-be2d-42ea-b6b9-e015eb5a2186",
    "metadata": {},
    "outputs": [],
    "source": []
