include code to get data for Jeemijn

--- a/notebooks/Plot_perturbations.ipynb
+++ b/notebooks/Plot_perturbations.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bb86fb04-7461-470f-b31a-3d2159966311",
    "metadata": {},
@@ -26,7 +27,7 @@
     "\n",
     "from rundata import RunData\n",
     "\n",
-    "#np.set_printoptions(precision=2)\n",
+    "np.set_printoptions(precision=2)\n",
     "%matplotlib notebook\n",
     "%matplotlib inline\n",
     "%config InlineBackend.print_figure_kwargs={'bbox_inches':None}\n",
@@ -42,7 +43,7 @@
    "outputs": [],
    "source": [
     "#runs = ['ctrl','half','hal2','totl','tot2']\n",
-    "runs = ['ctrl','tot2','amun']"
+    "runs = ['ctrl','tot2','amun','ross']"
    ]
   },
   {
@@ -76,10 +77,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmax = 100*12\n",
+    "tmax = 150*12\n",
     "nbasins = 5 #5 or 7\n",
     "\n",
-    "fig,ax = plt.subplots(3,nbasins,sharex=True,sharey='row')\n",
+    "fig,ax = plt.subplots(2,nbasins,sharex=True,sharey='row')\n",
     "\n",
     "ctrl = xr.open_dataset(f'../data/temperature_mon_ctrl.nc').isel(time=slice(0,tmax))\n",
     "\n",
@@ -95,18 +96,18 @@
     "    for b,bas in enumerate(ds.basin.values[:nbasins]):\n",
     "        ax[0,b].plot(ds.time/12,ds.temp.sel(basin=bas),c=rd.rcol[run],label=run)\n",
     "        ax[1,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl.temp.sel(basin=bas),c=rd.rcol[run])\n",
-    "        if run != 'ctrl':\n",
-    "            ax[2,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl2.sel(basin=bas),c=rd.rcol[run])\n",
-    "        else:\n",
-    "            ax[0,b].plot(ds.time/12,ctrl2.sel(basin=bas),c=rd.rcol[run],lw=.5)\n",
-    "        ax[2,b].axhline(0,0,1,c=rd.rcol['ctrl'],lw=.5)\n",
+    "        #if run == 'ctrl':\n",
+    "        #    ax[0,b].plot(ds.time/12,ctrl2.sel(basin=bas),c=rd.rcol[run])\n",
+    "        #if run != 'ctrl':\n",
+    "        #    ax[2,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl2.sel(basin=bas),c=rd.rcol[run])\n",
+    "        #ax[2,b].axhline(0,0,1,c=rd.rcol['ctrl'],lw=.5)\n",
     "        ax[0,b].set_title(bas,color=rd.bcol[bas],loc='left')\n",
     "    ds.close()\n",
     "    \n",
     "ax[0,0].legend()\n",
     "ax[0,0].set_ylabel('Subsurface Temperature [degC]')\n",
     "ax[1,0].set_ylabel('Temp anom from ctrl [degC]')\n",
-    "ax[2,0].set_ylabel('Temp anom from fit through ctrl [degC]')\n",
+    "#ax[2,0].set_ylabel('Temp anom from fit through ctrl [degC]')\n",
     "fig.supxlabel('Time [years]')\n",
     "\n",
     "plt.savefig(f'../draftfigs/dumfig_perturbation.png',dpi=450,facecolor='w',transparent=False)\n",
