Include lump ORF option

--- a/notebooks/Draftplot_full_ensemble_calibrated_lump.ipynb
+++ b/notebooks/Draftplot_full_ensemble_calibrated_lump.ipynb
@@ -69,6 +69,7 @@
     "fe = FullEnsemble(ad)\n",
     "fe.cal = 'S'\n",
     "fe.nonlin = 'cutoff'\n",
+    "fe.lump = True\n",
     "fe.gather(force_update=False)"
    ]
   },
@@ -137,7 +138,7 @@
     "ax[0].set_ylabel('Cumulative sea-level rise [cm]')\n",
     "ax[1].set_xlabel('Time [years]')\n",
     "\n",
-    "plt.savefig(f'../draftfigs/full_ensemble_cal{fe.cal}_{fe.nonlin}_{fe.year0}.png',dpi=450,facecolor='w',transparent=False)\n",
+    "plt.savefig(f'../draftfigs/full_ensemble_cal{fe.cal}_{fe.nonlin}_{fe.year0}_lump.png',dpi=450,facecolor='w',transparent=False)\n",
     "plt.show()"
    ]
   },
