--- a/notebooks/Draftplot_full_ensemble_fixed.ipynb
+++ b/notebooks/Draftplot_full_ensemble_fixed.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fdd590cf-e8ed-4c23-b16e-0d33727e5f9c",
    "metadata": {},
@@ -36,6 +37,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "22333138-56a4-48ca-973a-a400b4180028",
    "metadata": {},
@@ -67,6 +69,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0dc837d2-9c50-4867-b502-71ad662e9e68",
    "metadata": {},
@@ -89,6 +92,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d06d646b-c9f7-40b6-bfad-41cfcfc95009",
    "metadata": {},
