--- a/notebooks/Draftplot_full_ensemble_fixed_lump.ipynb
+++ b/notebooks/Draftplot_full_ensemble_fixed_lump.ipynb
@@ -20,12 +20,13 @@
     "import xarray as xr\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "\n",
     "import sys\n",
     "sys.path.append('../src')\n",
     "\n",
     "from alldata import AllData\n",
-    "from ensemble import EnsembleMember,FullEnsemble\n",
+    "from ensemble import EnsembleMember,FullEnsemble2\n",
     "\n",
     "np.set_printoptions(precision=2)\n",
     "%matplotlib notebook\n",
@@ -47,13 +48,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa9b953b-df10-4da8-8a20-51886523dcf3",
-   "metadata": {
-    "tags": []
-   },
+   "id": "8da3af88-2775-4e38-83bd-a1346a73f711",
+   "metadata": {},
    "outputs": [],
    "source": [
     "ad = AllData()\n",
+    "ad.niter = 10\n",
     "ad.year0 = 1951\n",
     "ad.usefanom = True\n",
     "ad.gather(update=False)\n",
@@ -63,13 +63,11 @@
     "\n",
     "#Optionally subsection of models for rapid calculation\n",
     "#ad.ds = ad.ds.isel(ism=slice(0,2),esm=slice(0,2))\n",
-    "#ad.ds = ad.ds.isel(esm=slice(0,5))\n",
     "\n",
-    "\n",
-    "fe = FullEnsemble(ad)\n",
-    "fe.cal = 'S'\n",
+    "fe = FullEnsemble2(ad)\n",
     "fe.nonlin = 'cutoff'\n",
-    "fe.gather(force_update=False)"
+    "fe.lump = True\n",
+    "fe.gather(force_update=True)"
    ]
   },
   {
@@ -89,7 +87,7 @@
    "outputs": [],
    "source": [
     "plt.style.use('../src/style_paper')\n",
-    "mpl.rc('figure.subplot',left=.15,bottom=.2)\n",
+    "mpl.rc('figure.subplot',left=.15,bottom=.2,wspace=.15)\n",
     "\n",
     "alpha = .3 #Transparency of uncertainty range\n",
     "perc = [17,83] #Percentiles of uncertainty range"
@@ -108,15 +106,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "608683aa-7328-402c-85ff-68a0b6ba45df",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "fig,ax = plt.subplots(1,3,sharex=True,sharey='row',figsize=(7,3))\n",
+    "fig,ax = plt.subplots(1,len(fe.ssp),sharex=True,sharey='row',figsize=(7,3))\n",
     "\n",
-    "print(np.sum(~np.isnan(fe.gamma[0,:,:].values)),'of',fe.gamma.shape[1]*fe.gamma.shape[2],'valid gammas')    \n",
-    "\n",
-    "for s,ss in enumerate(ad.ssp):\n",
-    "    \n",
+    "for s,ss in enumerate(fe.ssp.values):\n",
     "    #Plot no feedback\n",
     "    ax[s].plot(fe.time,100*np.nanmedian(fe.slr[0,s,:,:,:],axis=(0,1)),c='.5',lw=2,label='No feedback')\n",
     "    ax[s].fill_between(fe.time,100*np.nanpercentile(fe.slr[0,s,:,:,:],perc[0],axis=(0,1)),100*np.nanpercentile(fe.slr[0,s,:,:,:],perc[1],axis=(0,1)),color='.5',alpha=alpha)#,label=perc)\n",
@@ -124,27 +121,30 @@
     "    #Plot with feedback\n",
     "    ax[s].plot(fe.time,100*np.nanmedian(fe.slr[1,s,:,:,:],axis=(0,1)),c=ad.scol[ss],lw=2,label='Feedback')\n",
     "    ax[s].fill_between(fe.time,100*np.nanpercentile(fe.slr[1,s,:,:,:],perc[0],axis=(0,1)),100*np.nanpercentile(fe.slr[1,s,:,:,:],perc[1],axis=(0,1)),color=ad.scol[ss],alpha=alpha)\n",
-    "    \n",
+    "\n",
     "    ax[s].set_title(f'SSP-{ss}')\n",
     "    \n",
-    "    print(ss,'md',np.nanmedian(fe.slr[1,s,:,:,:],axis=(0,1))[-1]/(np.nanmedian(fe.slr[0,s,:,:,:],axis=(0,1))[-1]))\n",
-    "    #print(ss,'mn',np.nanmean(fe.slr[1,s,:,:,:],axis=(0,1))[-1]/(np.nanmean(fe.slr[0,s,:,:,:],axis=(0,1))[-1]))\n",
-    "    print(ss,'83',np.nanpercentile(fe.slr[1,s,:,:,:],83,axis=(0,1))[-1]/(np.nanpercentile(fe.slr[0,s,:,:,:],83,axis=(0,1))[-1]))\n",
-    "    #print(ss,'95',np.nanpercentile(fe.slr[1,s,:,:,:],95,axis=(0,1))[-1]/(np.nanpercentile(fe.slr[0,s,:,:,:],95,axis=(0,1))[-1]))\n",
+    "    print(ss,np.nanmedian(fe.slr[1,s,:,:,:],axis=(0,1))[-1]/(np.nanmedian(fe.slr[0,s,:,:,:],axis=(0,1))[-1]))\n",
     "\n",
+    "for a,aa in enumerate(['nf','wf']):\n",
+    "    for s,ss in enumerate(fe.ssp.values):\n",
+    "        print(aa,ss,100*np.nanmedian(fe.slr[a,s,:,:,2017-fe.year0]-fe.slr[a,s,:,:,1979-fe.year0]))\n",
     "    \n",
     "ax[0].legend(loc='upper left')\n",
     "ax[0].set_ylabel('Cumulative sea-level rise [cm]')\n",
     "ax[1].set_xlabel('Time [years]')\n",
     "\n",
-    "plt.savefig(f'../draftfigs/full_ensemble_cal{fe.cal}_{fe.nonlin}_{fe.year0}.png',dpi=450,facecolor='w',transparent=False)\n",
+    "#ax[1].set_xlim([1979,2017])\n",
+    "#ax[1].set_ylim([0,2])\n",
+    "\n",
+    "plt.savefig(f'../draftfigs/full_ensemble_fixed_{fe.nonlin}_{fe.year0}_lump.png',dpi=450,facecolor='w',transparent=False)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0cc3d3a-04ac-4e39-9c67-13d924ab4496",
+   "id": "0b7e79c1-f485-43df-8d24-1aaf539b62d3",
    "metadata": {},
    "outputs": [],
    "source": []
