Update figures with lump=true

--- a/notebooks/Draftplot_full_ensemble_fixed_lump.ipynb
+++ b/notebooks/Draftplot_full_ensemble_fixed_lump.ipynb
@@ -67,7 +67,7 @@
     "fe = FullEnsemble2(ad)\n",
     "fe.nonlin = 'cutoff'\n",
     "fe.lump = True\n",
-    "fe.gather(force_update=True)"
+    "fe.gather(force_update=False)"
    ]
   },
   {
