--- a/notebooks/Draftplot_historical.ipynb
+++ b/notebooks/Draftplot_historical.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fdd590cf-e8ed-4c23-b16e-0d33727e5f9c",
    "metadata": {},
@@ -36,6 +37,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "22333138-56a4-48ca-973a-a400b4180028",
    "metadata": {},
@@ -50,8 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#option = 'calibrated'\n",
-    "option = 'fixed'"
+    "option = 'calibrated'\n",
+    "#option = 'fixed'"
    ]
   },
   {
@@ -75,6 +77,7 @@
     "elif option=='fixed':\n",
     "    fe = FullEnsemble2(ad)\n",
     "fe.nonlin = 'cutoff'\n",
+    "fe.lump = True\n",
     "fe.gather(force_update=False)"
    ]
   },
@@ -112,6 +115,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0dc837d2-9c50-4867-b502-71ad662e9e68",
    "metadata": {},
@@ -134,6 +138,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d06d646b-c9f7-40b6-bfad-41cfcfc95009",
    "metadata": {},
@@ -181,7 +186,7 @@
     "\n",
     "#Plot no feedback\n",
     "var = 1000*(fe.slr[0,1,:,:,1:].values-fe.slr[0,1,:,:,:-1].values)\n",
-    "dax.plot(fe.time[1:],np.median(var,axis=(0,1)),c='.5',lw=2,label='No feedback')\n",
+    "dax.plot(fe.time[1:],np.nanmedian(var,axis=(0,1)),c='.5',lw=2,label='No feedback')\n",
     "dax.fill_between(fe.time[1:],np.nanpercentile(var,perc[0],axis=(0,1)),np.nanpercentile(var,perc[1],axis=(0,1)),color='.5',alpha=alpha)#,label=perc)\n",
     "\n",
     "#Plot with feedback\n",
