--- a/notebooks/Draftplot_single_ensemble.ipynb
+++ b/notebooks/Draftplot_single_ensemble.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "26b6cfdc-0a1b-4168-95f6-65247c7df1b3",
    "metadata": {},
@@ -39,6 +40,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "67e960b5-185e-4cb0-af82-5932b993d445",
    "metadata": {},
@@ -97,6 +99,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "959c0475-e7e2-40a8-ac42-947d02a8b291",
    "metadata": {},
@@ -114,6 +117,7 @@
     "#Read data\n",
     "ad = AllData()\n",
     "ad.fitctrl=True\n",
+    "ad.usefanom = True\n",
     "ad.gather(update=False)\n",
     "\n",
     "#print(ad.esm)\n",
@@ -127,13 +131,14 @@
     "ens = EnsembleMember(ad,ism=ism,esm=esm,ssp=ssp,year0=year0,cal=cal,nonlin=nonlin)\n",
     "#ens.niter=1\n",
     "ens.verbose=True\n",
-    "ens.usefanom = True\n",
+    "ens.lump = True\n",
     "ens.compute(gamma=np.array([2.57,2.57]),recal=False)\n",
     "\n",
     "print(ens.gamma)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d5d8d78c-b407-4df5-a6c9-f47f00142aee",
    "metadata": {},
@@ -156,6 +161,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "636520e5-9932-4c57-8671-18043b518a81",
    "metadata": {},
