--- a/notebooks/Draftplot_gamma.ipynb
+++ b/notebooks/Draftplot_gamma.ipynb
@@ -41,6 +41,7 @@
     "fe = FullEnsemble(ad)\n",
     "fe.cal = 'S'\n",
     "fe.nonlin = 'cutoff'\n",
+    "fe.lump = True\n",
     "fe.gather(force_update=False)"
    ]
   },
