--- a/notebooks/Draftplot_linearitycheck.ipynb
+++ b/notebooks/Draftplot_linearitycheck.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c7e55e11-aa54-4d1f-a0c2-4147e9c0cb14",
    "metadata": {},
@@ -39,6 +40,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1505dfe8-7070-4b5c-a3ed-1e6a761aaeb8",
    "metadata": {},
@@ -60,6 +62,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2b63b801-2e08-4b81-807a-fda2896905aa",
    "metadata": {},
@@ -102,7 +105,11 @@
     "    for i in range(4):\n",
     "        ax[b,i].axhline(0,0,1,c='.5',ls=':')\n",
     "    \n",
-    "    ax[b,0].plot(ad.rftime,np.mean(ad.tanom[:,:5,b],axis=1),c=ad.bcol[bas],lw=0.5)\n",
+    "\n",
+    "    for e in range(5):\n",
+    "        ax[b,0].plot(ad.rftime,ad.tanom[:,e,b],c='grey',lw=0.2,zorder=0)\n",
+    "\n",
+    "    ax[b,0].plot(ad.rftime,np.mean(ad.tanom[:,:5,b],axis=1),c=ad.bcol[bas],lw=0.5,zorder=10)\n",
     "    #ax[b,0].plot(ad.rftime,np.mean(ad.fanom[:,:5,b],axis=1),c=ad.bcol[bas],lw=1.5)\n",
     "    ax[b,1].plot(ad.rftime,ad.tanom[:,6,b],c=ad.bcol[bas],lw=0.5)\n",
     "    #ax[b,1].plot(ad.rftime,ad.fanom[:,6,b],c=ad.bcol[bas],lw=1.5)\n",
